--- a/angular-app/src/app/components/records/records.component.html
+++ b/angular-app/src/app/components/records/records.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isInitialised">
-    <table>
+    <table *ngIf="!idFormExternal">
         <tbody>
             <tr>
                 <td>
