--- a/angular-app/src/app/home/login.component.html
+++ b/angular-app/src/app/home/login.component.html
@@ -1,1 +1,4 @@
-<a mat-raised-button href="http://localhost:3000/auth/github">Sign in with github</a>
+<div style="padding: 10em 0;">
+    <a style="display: table;
+    margin: 0 auto;" (click)="loginAnimation()" mat-raised-button href="http://localhost:3000/auth/github">Sign in with GitHub</a>
+</div>
