--- a/angular-app/src/app/trial/trial.component.html
+++ b/angular-app/src/app/trial/trial.component.html
@@ -1,5 +1,12 @@
-<div class="docs-primary-header component-page-header">
-  <h1 focusOnNavigation>All trials</h1>
+
+  <div class="center-div">
+    <mat-card class="description-card">
+      <mat-card-header>
+        <h2 class="marginAutoLR">My trials</h2>
+      </mat-card-header>
+    </mat-card>
+
+
 </div>
 
 <br/>
