--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,4 +1,9 @@
-<header _ngcontent-c0 = "">
-<navbar-component></navbar-component>
+<header _ngcontent-c0="">
+    <navbar-component></navbar-component>
 </header>
-<router-outlet></router-outlet>
+<div *ngIf="objLoaderStatus" class="loading-indicator">
+        <mat-spinner mode="indeterminate"></mat-spinner>
+    </div>
+<router-outlet>
+
+</router-outlet>
