--- a/angular-app/src/app/home/patient-view/patient-view.component.html
+++ b/angular-app/src/app/home/patient-view/patient-view.component.html
@@ -1,24 +1,47 @@
 <div *ngIf="isInitialised">
     <div class="center-div">
-        <mat-card style= "width:45%;  height:200px;">
+        <mat-card style= "width:35%; height: 75vh;">
             <mat-card-header>
                 <mat-card-title><h1>Patient Overview</h1></mat-card-title>
-                <mat-card-subtitle><h2>{{patient.person.firstName}}{{patient.person.lastName}}</h2></mat-card-subtitle>
+                <mat-card-subtitle><h2>{{patient.person.firstName}} {{patient.person.lastName}}</h2></mat-card-subtitle>
 
             </mat-card-header>
             <mat-card-content>
-
+                <mat-divider></mat-divider>
+                <br/>
+                Gender:&nbsp; {{patient.person.gender}}
+                <br/>
+                <br/>
+                <mat-divider></mat-divider><br/>
+                Address:&nbsp; {{patient.person.contactDetails.address.country}}, {{patient.person.contactDetails.address.city}}, {{patient.person.contactDetails.address.region}}, {{patient.person.contactDetails.address.street}}
+                <br/><br/>
+                <mat-divider></mat-divider><br/>
+                E-mail:&nbsp; {{patient.person.contactDetails.email}}
+                <br/><br/>
+                <mat-divider></mat-divider><br/>
+                Phone:&nbsp; {{patient.person.contactDetails.mobilePhone}}
+                <br/><br/>
+                <mat-divider></mat-divider><br/>
+                Birthdate:&nbsp; {{formattedBirthdate.toLocaleDateString()}}
+                <br/><br/>
+                <mat-divider></mat-divider><br/>
+                Age:&nbsp; {{age}}
+                <br/><br/>
+                <mat-divider></mat-divider><br/>
+                Place of birth:&nbsp; {{patient.person.birthDetails.placeOfBirth}}
+                <br/><br/>
+                <mat-divider></mat-divider>
             </mat-card-content>
         </mat-card>
         &nbsp;
-        <mat-card style= "width: 45%; height:200px;">
+        <mat-card style= "width: 65%; height: 75vh;">
             <mat-card-header>
-                <mat-card-title><h2>Patient Overview</h2></mat-card-title>
-                <mat-card-subtitle>{{patient.person.firstName}}{{patient.person.lastName}}</mat-card-subtitle>
+                <mat-card-title><h2>Patient History</h2></mat-card-title>
+                
             </mat-card-header>
             <mat-card-content>
 
             </mat-card-content>
         </mat-card>
-    </div>
+   </div>
 </div>
