--- a/angular-app/src/app/administration/administration.component.html
+++ b/angular-app/src/app/administration/administration.component.html
@@ -122,4 +122,58 @@
       </mat-table>
     </div>
   </mat-tab>
+  <mat-tab label="Agents">
+    <br/>
+
+    <div class="floating-button">
+      <a mat-fab routerLink="newagent" color="primary">
+        <mat-icon aria-label="New Agent">add</mat-icon>
+      </a>
+    </div>
+    <div class="table-container mat-elevation-z8">
+      <mat-table #table [dataSource]="allAgentsDataSource">
+
+        <!-- Patient ID column -->
+        <ng-container matColumnDef="AgentID">
+          <mat-header-cell *matHeaderCellDef> AgentID </mat-header-cell>
+          <mat-cell *matCellDef="let agent"> {{agent.idAgent}} </mat-cell>
+        </ng-container>
+
+        <!-- Name column -->
+        <ng-container matColumnDef="Name">
+          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+          <mat-cell *matCellDef="let agent"> {{agent.person.firstName}} {{agent.person.lastName}} </mat-cell>
+        </ng-container>
+
+        <!-- Gender column -->
+        <ng-container matColumnDef="Gender">
+          <mat-header-cell *matHeaderCellDef> Gender </mat-header-cell>
+          <mat-cell *matCellDef="let agent"> {{agent.person.gender}}</mat-cell>
+        </ng-container>
+
+        <!-- Birthdate column -->
+        <ng-container matColumnDef="Birthdate">
+          <mat-header-cell *matHeaderCellDef> Birthdate </mat-header-cell>
+          <mat-cell *matCellDef="let agent"> {{agent.person.birthDetails.dateOfBirth}}</mat-cell>
+        </ng-container>
+
+        <!-- Action link column -->
+        <ng-container matColumnDef="Action">
+          <mat-header-cell *matHeaderCellDef></mat-header-cell>
+          <mat-cell *matCellDef="let agent">
+            <a mat-button [routerLink]="['newagent',agent.idAgent]" color="primary">
+              <i class="material-icons">mode_edit</i>
+            </a>
+            <a mat-button (click)="deleteAgent(agent)" color="primary">
+              <i class="material-icons">delete_sweep</i>
+            </a>
+          </mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="agentColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: agentColumns;"></mat-row>
+
+      </mat-table>
+    </div>
+  </mat-tab>
 </mat-tab-group>
