--- a/angular-app/src/app/home/patient-view/patient-view.component.html
+++ b/angular-app/src/app/home/patient-view/patient-view.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isInitialised">
     <div class="center-div">
-        <mat-card style= "width:35%; height: 75vh;">
+        <mat-card style= "width: 80%; height: 75vh;">
             <mat-card-header>
                 <mat-card-title><h1>Patient Overview</h1></mat-card-title>
                 <mat-card-subtitle><h2>{{patient.person.firstName}} {{patient.person.lastName}}</h2></mat-card-subtitle>
@@ -33,7 +33,7 @@
                 <mat-divider></mat-divider>
             </mat-card-content>
         </mat-card>
-        &nbsp;
+      <!--  &nbsp;
         <mat-card style= "width: 65%; height: 75vh;">
             <mat-card-header>
                 <mat-card-title><h2>Patient History</h2></mat-card-title>
@@ -42,6 +42,6 @@
             <mat-card-content>
 
             </mat-card-content>
-        </mat-card>
+        </mat-card> -->
    </div>
 </div>
