--- a/angular-app/src/app/home/home.component.html
+++ b/angular-app/src/app/home/home.component.html
@@ -24,6 +24,8 @@
         <br/>
         <mat-radio-button value="sponsor">Sponsor </mat-radio-button>
         <br/>
+        <mat-radio-button value="admin">Administrator </mat-radio-button>
+        <br/>
     </mat-radio-group>
 </div>
 <br/>
